--- a/css/main.css
+++ b/css/main.css
@@ -56,7 +56,7 @@ img {
     text-align: center;
     color: #FFFFFF;
 }
-
+/*подзогаловок*/
 .header-subtitle {
     margin: 0;
     font-weight: bold;
@@ -282,4 +282,18 @@ img {
 .project-btn-back:hover {
     background-color: #275BEC;
     color: white;
+}
+
+.block {
+    width: 800px;
+    height: 400px;
+    background-color: blueviolet;
+}
+
+/*  Медиа-запрос desctop first (от большего к меньшему) для экранов с шириной до 800px (800px - это точка перелома) */
+@media (max-width: 800px) {
+    .block {
+        width: 400px;
+        background-color: coral;
+    }
 }
