--- a/css/media.css
+++ b/css/media.css
@@ -2,6 +2,26 @@
     .card {
         width: calc(50% - 15px);
     }
+
+    .footer {
+        padding-top: 40px;
+        padding-bottom: 60px;
+    }
+
+    /* ряд в подвале в обратном порядке*/
+    .footer-row {
+        flex-direction: column-reverse;
+        align-items: center;
+        text-align: center;
+    }
+
+    .footer-col {
+        margin-bottom: 50px;
+    }
+    /* убираем отступ подвала снизу */
+    .footer-col:first-child {
+        margin-bottom: 0px;
+    }
 }
 
 /* Медиа запрос для экранов с шириной 760px */
@@ -52,5 +72,52 @@
 
     .card p {
         font-size: 14px;
+    }
+
+    .footer-copyright-name {
+        font-size: 18px;
+        margin-bottom: 5px;
+    }
+
+    .footer-copyright p {
+        font-size: 14px;
+    }
+
+    .footer-icons p {
+        font-size: 14px;
+    }
+
+    .footer-contacts p{
+        font-size: 14px;
+        margin: 0;
+        margin-top: 15px;
+    }
+
+    .footer-button {
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+
+    .project {
+        padding: 40px 0 60px;
+    }
+
+    .project-header {
+        font-size: 28px;
+        margin-bottom: 30px;
+    }
+
+    .project-img {
+        margin-bottom: 20px;
+    }
+
+    .project-description {
+        margin-bottom: 50px;
+    }
+
+    .project-btn-back {
+        padding: 0 10px;
+        width: 100%;
+        max-width: 320px;
     }
 }
