--- a/css/main.css
+++ b/css/main.css
@@ -41,8 +41,8 @@ img {
     width: 100%;
     height: 100vh;
 
-    background-color: #556983;
-    background-image: url("./../css/img/header/header-bg.jpg");
+    /* background-color: #556983; */
+    /* background-image: url("./../css/img/header/header-bg.jpg"); */
     background-size: cover;
     background-position: center;
 }
